syntax = "proto3";

package jnoj.interface.v1.sandboxs;

option go_package = "api/interface/v1;v1";

import "google/api/annotations.proto";
import "validate/validate.proto";

service SandboxsService {
    rpc Run (RunRequest) returns (RunResponse) {
        option (google.api.http) = {
            post: "/sandboxs"
            body: "*"
        };
    };
}

message RunRequest {
    // 源码
    string source = 1;
    // 输入
    repeated string stdin = 2;
    // 语言
    int32 language = 3;
    // 针对 函数题，需要查询对应的输入输出主体函数
    optional int32 language_id = 4;
    int64 memory_limit = 5 [(validate.rules).int64 = {gte:4, lte: 1024}];
    int64 time_limit = 6 [(validate.rules).int64 = {gte:250, lte: 15000}];
}

message RunResult {
    string stdout = 1;
    string stderr = 2;
    int64 time = 3;
    int64 memory = 4;
    int32 exit_code = 5;
    string err_msg = 6;
}

message RunResponse {
    repeated RunResult results = 1;
    string compile_msg = 2;
}
